[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Test_area.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BUY_button.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "ItemAdded"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera2D/Inventory:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -640, -0.25, 0, 0.25, 0, -496, -0.25, 0, 0.25, 0, -496, -0.25, 0, 0.25, 0, -640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1.1, 1.5 )
}

[node name="Test_area" type="Node2D" groups=["MAIN"]]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[node name="Build_planets" type="Node2D" parent="Camera2D"]
visible = false
position = Vector2( -640, -360 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/Build_planets"]
margin_left = 384.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 568.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[node name="TabContainer" type="TabContainer" parent="Camera2D/Build_planets"]
margin_left = 392.0
margin_top = 72.0
margin_right = 888.0
margin_bottom = 560.0
tab_align = 0

[node name="Build" type="Tabs" parent="Camera2D/Build_planets/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="Camera2D/Build_planets/TabContainer/Build"]
margin_left = 4.0
margin_right = 484.0
margin_bottom = 448.0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer"]
margin_right = 480.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 480.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Build your stars"
align = 1
valign = 1

[node name="TEXTS" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 480.0
margin_bottom = 32.0
columns = 3

[node name="Label" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/TEXTS"]
margin_right = 157.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Star"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/TEXTS"]
margin_left = 161.0
margin_right = 318.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Cost"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/TEXTS"]
margin_left = 322.0
margin_right = 479.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Buy"
align = 1
valign = 1

[node name="ITEMS" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 480.0
margin_bottom = 134.0

[node name="Gasoso" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS"]
margin_right = 480.0
margin_bottom = 30.0
size_flags_horizontal = 3
columns = 3

[node name="Label" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Gasoso"]
margin_top = 8.0
margin_right = 157.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Gas planet"
align = 1
valign = 1

[node name="Value" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Gasoso"]
margin_left = 161.0
margin_top = 8.0
margin_right = 318.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "He-100"
align = 1
valign = 1

[node name="BUY" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Gasoso" instance=ExtResource( 2 )]
margin_left = 325.0
margin_right = 475.0

[node name="Solido" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS"]
margin_top = 34.0
margin_right = 480.0
margin_bottom = 64.0
size_flags_horizontal = 3
columns = 3

[node name="Label" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Solido"]
margin_top = 8.0
margin_right = 157.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Solid planet"
align = 1
valign = 1

[node name="Value" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Solido"]
margin_left = 161.0
margin_top = 8.0
margin_right = 318.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Al-100 "
align = 1
valign = 1

[node name="BUY" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Solido" instance=ExtResource( 2 )]
margin_left = 325.0
margin_right = 475.0

[node name="Liquido" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS"]
margin_top = 68.0
margin_right = 480.0
margin_bottom = 98.0
size_flags_horizontal = 3
columns = 3

[node name="Label" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Liquido"]
margin_top = 8.0
margin_right = 157.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Liquid planet"
align = 1
valign = 1

[node name="Value" type="Label" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Liquido"]
margin_left = 161.0
margin_top = 8.0
margin_right = 318.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "H-100 "
align = 1
valign = 1

[node name="BUY" parent="Camera2D/Build_planets/TabContainer/Build/ScrollContainer/VBoxContainer/GridContainer/ITEMS/Liquido" instance=ExtResource( 2 )]
margin_left = 325.0
margin_right = 475.0

[node name="Manage" type="Tabs" parent="Camera2D/Build_planets/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="Camera2D/Build_planets/TabContainer/Manage"]
margin_left = 4.0
margin_right = 484.0
margin_bottom = 448.0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer"]
margin_right = 480.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 480.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Manage your stars"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 480.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="INDEX_BACK" type="Button" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer"]
margin_right = 30.0
margin_bottom = 430.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
size_flags_vertical = 3
disabled = true
enabled_focus_mode = 0
text = "<"

[node name="GridContainer" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer"]
margin_left = 34.0
margin_right = 446.0
margin_bottom = 430.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer"]
margin_right = 412.0
margin_bottom = 128.0
size_flags_horizontal = 3
columns = 2

[node name="TextureRect" type="TextureRect" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/GridContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )

[node name="GridContainer" type="GridContainer" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/GridContainer"]
margin_left = 132.0
margin_right = 412.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/GridContainer/GridContainer"]
margin_top = 7.0
margin_right = 280.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "TYPE: Sun"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/GridContainer/GridContainer"]
margin_top = 40.0
margin_right = 280.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Level: 1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/GridContainer/GridContainer"]
margin_top = 73.0
margin_right = 280.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Experience: 0"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/GridContainer/GridContainer"]
margin_top = 106.0
margin_right = 280.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Mass: 100"
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer"]
margin_top = 132.0
margin_right = 412.0
margin_bottom = 430.0
size_flags_vertical = 3
tab_align = 0

[node name="Upgrades" type="Tabs" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Styles" type="Tabs" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/GridContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="INDEX_FORWARD" type="Button" parent="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer"]
margin_left = 450.0
margin_right = 480.0
margin_bottom = 430.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = ">"

[node name="Inventory" type="Node2D" parent="Camera2D"]
position = Vector2( -640, -360 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/Inventory"]
margin_left = -144.0
margin_bottom = 704.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Camera2D/Inventory"]
margin_left = -136.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 696.0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Inventory/ScrollContainer"]
margin_right = 128.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="INV" type="GridContainer" parent="Camera2D/Inventory/ScrollContainer/VBoxContainer" groups=["INVENTORY"]]
margin_right = 128.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Planets" type="Node2D" parent="Camera2D"]
position = Vector2( 640, -360 )

[node name="ColorRect" type="ColorRect" parent="Camera2D/Planets"]
margin_right = 144.0
margin_bottom = 704.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Camera2D/Planets"]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 696.0

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/Planets/ScrollContainer"]
margin_right = 128.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PLANETS" type="GridContainer" parent="Camera2D/Planets/ScrollContainer/VBoxContainer" groups=["PLANETS"]]
margin_right = 128.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ItemAdded = SubResource( 1 )

[node name="PLANETS" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_up" from="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/INDEX_BACK" to="." method="_on_INDEX_BACK_button_up"]
[connection signal="button_up" from="Camera2D/Build_planets/TabContainer/Manage/ScrollContainer/VBoxContainer/GridContainer/GridContainer/INDEX_FORWARD" to="." method="_on_INDEX_FORWARD_button_up"]
